# skillctl

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
skillctl/: __init__.py  cli.py  config.py  proxy.py  registry.py  resolver.py  runtime.py  shims.py
tests/: test_cli.py  test_proxy.py  test_registry.py  test_runtime.py  test_shims.py
