[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillctl"
version = "0.0.1"
description = "Lazy skill launcher for Codex, Claude, and Gemini CLIs"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
skillctl = "skillctl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
